--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -2,12 +2,12 @@ body {
     max-width: 1600px;
     font-family: 'Roboto';
     font-style: normal;
-}
-
-.center {
     margin: auto;
 }
+
+
 .container {
+    margin: auto;
     max-width: 1160px;
 }
 
@@ -35,6 +35,7 @@ a:visited {
 }
 a:hover {
     color: #E47209;
+    transition: 0.2s;
 }
 a:active {
     color: #F9804B;
@@ -48,6 +49,7 @@ a:active {
     font-size: 16px;
     line-height: 140%;
     color: #FFFFFF;
+    z-index: 100;
 }
 .menu-bar-flexbox {
     display: flex;
@@ -73,3 +75,55 @@ a:active {
 
 
 /* Header section ----------------------------------------------- */
+.header-background {
+    background-image: url("../../assets/images/jpeg/Giant-Panda.jpg");
+    height: 780px;
+}
+.header-container {
+    margin-top: 86px;
+    margin-left: auto;
+    margin-right: 220px;
+    max-width: 500px;
+}
+.header-circle {
+    border-radius: 50%;
+    background-color: #F9804B;
+    width: 465px;
+    height: 465px;
+}
+
+.title-content {
+    font-weight: 700;
+    font-size: 106.496px;
+    line-height: 80px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.title-selection {
+    color: #FFEE2E;
+}
+
+.button-watch {
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.button-watch-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 16px 0 16px 0;
+    background-color: #F9804B;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 25px;
+    width: 300px
+}
+.button-watch-text:hover {
+    background-color: #E47209;
+    transition: 0.2s;
+}
